Fix style: spacing of elements in weather app and spacing in form

--- a/style.scss
+++ b/style.scss
@@ -133,20 +133,20 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    padding: $font-size-1;
+    padding: $font-size-6 0 0;
     * {
       margin: $font-size-0/6;
     }
 
     p:nth-child(2) {
-      font-size: $font-size-3;
+      font-size: $font-size-4;
       letter-spacing: -0.6px;
     }
   }
 
   #wa-description {
     order: -1;
-    padding: $font-size-0/2 0 $font-size-6 0;
+    padding: $font-size-0/2 0 $font-size-3 0;
     img {
       margin: -$font-size-3;
       height: 110px;
@@ -156,7 +156,7 @@ main {
       margin: 0 auto;
     }
     p {
-      font-size: $font-size-2;
+      font-size: $font-size-3;
     }
   }
 
@@ -168,7 +168,7 @@ main {
     align-items: center;
     padding: $font-size-0;
     p {
-      font-size: $font-size-3;
+      font-size: $font-size-4;
       margin: 0;
     }
     p:nth-child(3),
@@ -186,11 +186,14 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: $font-size-0 0;
+    padding: $font-size-0 0 $font-size-6;
 
     line-height: 1;
     * {
       margin: 5px 0;
+    }
+    p {
+      font-size: $font-size-3;
     }
   }
 
@@ -199,6 +202,7 @@ main {
     bottom: -$font-size-1;
     right: 5px;
     height: $font-size-1;
+    padding: 0;
     p {
       font-size: $font-size-0;
       font-style: italic;
@@ -244,14 +248,15 @@ main {
 @media only screen and (max-width: 600px) {
   body {
     justify-content: flex-start;
+    align-items: center;
   }
 
   form {
     margin-top: 40px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    width: 300px;
+    justify-content: left;
+    width: 200px;
 
     input {
       width: 150px;
